<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HRP</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="_0">0</string>
    <string name="generate_key">Generate Key</string>

</resources>
