<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:orientation="vertical"
            tools:ignore="UselessParent" >

            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/username"
                android:inputType="text"
                android:textColorHint="@color/DarkGreen" >
            </EditText>

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/DarkGreen" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="80dp"
                android:layout_height="35dp"
                android:layout_marginLeft="165dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_press"
                android:text="@string/login"
                android:textColor="@color/DarkGreen" />
        </LinearLayout>
    </FrameLayout>

</RelativeLayout>