<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessLeaf" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp" >

            <TextView
                android:id="@+id/messageTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"
                android:text="@string/_0"
                android:textColor="@color/Red"
                android:textSize="50sp"
                android:visibility="invisible" />
        </FrameLayout>

        <ImageView
            android:id="@+id/animatedImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="88dp"
            android:layout_marginTop="65dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/staege_one_first"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/buttonImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="89dp"
            android:layout_marginTop="130dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/generatekeybutton" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="79dp"
            android:layout_marginTop="40dp"
            android:textColor="@color/BlueViolet"
            android:text="@string/generate_key"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </FrameLayout>

</RelativeLayout>